src/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__design_augmented_override.snap
---
source: src/oneil_snapshot_tests/src/test.rs
expression: "run_fixture(\"augmented_refs/override_augmented.one\")"
---
Model: fixtures/augmented_refs/parent.on
Tests: 0/0
Parameters:
  x = 50
  y = 100
  z = 42
  total = 192
