src/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__design_augmented_reference_params.snap
---
source: src/oneil_snapshot_tests/src/test.rs
expression: "run_fixture(\"augmented_refs/parent.on\")"
---
Model: fixtures/augmented_refs/parent.on
Tests: 0/0
Parameters:
  x = 10
  y = 20
  z = 42
  total = 72
