src/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__design_local_augmentation_labeled.snap
---
source: src/oneil_snapshot_tests/src/test.rs
expression: "run_fixture(\"design_local/augment_labeled.one\")"
---
Model: fixtures/design_local/target.on
Tests: 0/0
Parameters:
  radius = 10
  diameter = 20
  area = 314.2
