src/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__design_nested_apply_syntax.snap
---
source: src/oneil_snapshot_tests/src/test.rs
expression: "run_fixture(\"multi_seg_apply/parent_nested.on\")"
---
Model: fixtures/multi_seg_apply/parent_nested.on
Tests: 0/0
Parameters:
  result = 10
  mid_z = 42
